@@ -31,7 +31,7 @@ endif
 
 SOURCES = src/uoproxy.c src/config.c src/instance.c \
 	src/daemon.c src/log.c \
-	src/fifo-buffer.c src/sockbuff.c \
+	src/fifo-buffer.c src/flush.c src/sockbuff.c \
 	src/buffered-io.c src/socket-util.c \
 	src/netutil.c \
 	src/server.c src/client.c \
