@@ -6,6 +6,7 @@ uoproxy (0.1.4) unstable; urgency=low
   * send cached client version during reconnect; this fixed game login on
     servers supporting client version 6
   * use libevent
+  * write buffering
   * do asynchronous writes
 
  --
